# tackle

./: Cargo.toml  README.md
.tackle/: .gitignore  tackle.toml
src/: cache.rs  cli.rs  conditions.rs  config.rs  errors.rs  graph.rs  hooks.rs  main.rs  manifest.rs  os.rs  package.rs  packages.rs  project.rs  util.rs
src/assets/: tackle.toml
src/cli/: initialize.rs  install.rs  list.rs  mod.rs
src/hooks/: condition.rs  mod.rs
src/package/: cache.rs  download.rs  mod.rs  resolve.rs
tackle-graph/: Cargo.toml  README.md
tackle-graph/src/: lib.rs
tackle-package/: Cargo.toml
tackle-package/src/: link.rs  mod.rs
tackle-project/: Cargo.toml  README.md
tackle-project/src/: lib.rs
tackle-project/tests/: tackle.example.toml
tackle-runner/: Cargo.toml
tackle-store/: Cargo.toml
tackle/src/: project.rs  util.rs
tackle/src/cli/: list.rs
