[package]
name = "tackle"
version = "0.1.0"
edition = "2021"
authors = ["SkyezerFox (Kaylen) <actuallyori@gmail.com>"]

[dependencies]
clap = { version = "3", features = ["derive"] }
env_logger = "0.9"
git2 = "0.13"
lazy_static = "1"
log = "0.4"
pretty_env_logger = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
toml = "0.5"
