[package]
name = "tackle"
version = "0.1.0"
edition = "2021"
authors = ["SkyezerFox (Kaylen) <actuallyori@gmail.com>"]

[dependencies]
clap = { version = "3", default-features=false, features = ["std", "derive"] }
dirs = "4"
env_logger = "0.9"
futures = "0.3"
git2 = "0.14"
lazy_static = "1"
log = "0.4"
pretty_env_logger = "0.4"
regex = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
url = "2"
